Fix bug on confirm page.

--- a/templates/transaction/transaction_list.html
+++ b/templates/transaction/transaction_list.html
@@ -50,7 +50,8 @@
                             {% endwith %}
                             <br/>
                             <small style="color: {% if t.status == 'Successful' %}green{% else %}#ff7f50{% endif %}">
-                                {{ t.status }}</small>
+                                {{ t.status }}
+                            </small>
                         </span>
                     </div>
                 </a>
