--- a/templates/transaction/transaction_detail.html
+++ b/templates/transaction/transaction_detail.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
 {% load static %}
-
 {% load humanize %}
+{% load btc_filters %}
 
 {% block page-title %}Transaction Detail{% endblock %}
 
