Replace placeholders with actual logo image and icon.

--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -4,7 +4,7 @@
 <div id="appCapsule">
     <div class="login-form mt-1">
         <div class="section">
-            <img src="{% static 'assets/img/sample/photo/vector4.png' %}" alt="image" class="form-image">
+            <img src="{% static 'assets/img/transfr-logo.png' %}" alt="image" class="form-image">
         </div>
     </div>
 
