--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <title>Transfr - {% block page-title %}Send Money{% endblock %}</title>
         <meta name="description" content="Send money instantly to anyone in Ghana and Nigeria at the best rates!">
         <meta name="keywords" content="bootstrap 4, mobile template, cordova, phonegap, mobile, html" />
-        <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}" sizes="32x32">
+        <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.ico' %}" sizes="16x16">
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/icon/192x192.png' %}">
         <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
