--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -12,7 +12,7 @@
     <div class="section full mt-2 mb-2">
         <div class="wide-block pt-2 pb-2">
 
-            <form class="disable-btn-on-submit" method="post">
+            <form class="disable-btn-on-submit" method="POST">
                 {% csrf_token %}
                 {{ form.non_field_errors }}
                 <div class="form-group boxed">
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="mt-2">
-                    <button class="btn btn-primary btn-block" type="submit">Next</button>
+                    <button id="btn-submit" class="btn btn-primary btn-block" type="submit">Next</button>
                 </div>
 
             </form>
