--- a/templates/inc/capsules/_signin.html
+++ b/templates/inc/capsules/_signin.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="form-button-group">
-                    <button type="submit" class="btn btn-primary btn-block btn-lg">Log In</button>
+                    <button id="btn-submit" type="submit" class="btn btn-primary btn-block btn-lg">Log In</button>
                 </div>
 
             </form>
