--- a/templates/inc/capsules/_signin.html
+++ b/templates/inc/capsules/_signin.html
@@ -33,7 +33,7 @@
                         <span>Don't have an account?</span> 
                         <a href="{% url 'customer:sign-up' %}{% if next %}?next={{ next }}{% endif %}">Sign up</a>
                     </div>
-                    <div><a href="page-forgot-password.html" class="text-muted">Forgot Password?</a></div>
+                    <div><a href="#" class="text-muted">Forgot Password?</a></div>
                 </div>
 
                 <div class="form-button-group">
