Include confirm capsule. Disable confirm and add account button on submit.

--- a/templates/inc/capsules/_add-account.html
+++ b/templates/inc/capsules/_add-account.html
@@ -104,50 +104,12 @@
                 <input type="hidden" id="id_site" name="site" value="{{ site }}">
                 <input type="hidden" id="id_currency" name="currency" value="{{ currency }}">
                 <div class="mt-2">
-                    <button class="btn btn-primary btn-block" type="submit">Next</button>
-                    <!-- <button type="button" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#ModalForm">
-                        Next
-                    </button> -->
+                    <button id="btn-submit" class="btn btn-primary btn-block" type="submit">Next</button>
                 </div>
 
             </form>
 
         </div>
-        <!-- Modal Form -->
-        <!-- <div class="modal fade modalbox" id="ModalForm" data-backdrop="static" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Confirm Transfer</h5>
-                        <a href="javascript:;" data-dismiss="modal">Close</a>
-                    </div>
-                    <div class="modal-body mt-5">
-                        <div class="login-form">
-                            <div class="section mb-5 ml-2 mr-2">
-                                <p>
-                                    You are sending
-                                </p>
-                                <h3>GH₵1,000</h3>
-                                <p>To</p>
-                                <p>
-                                    Olaide, Akanbi M.
-                                </p>
-                                <p>
-                                    Guaranty Trust Bank Plc<br>
-                                    0003458760
-                                </p>
-                                <p>Recipient gets</p>
-                                <h3>₦15,000</h3>
-                                <div class="form-button-group">
-                                    <button type="submit" class="btn btn-primary btn-block btn-lg">Send Money</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <!-- * Modal Form -->
     </div>
 </div>
 <!-- * App Capsule -->
