--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,9 @@
         <script src="{% static 'assets/js/base.js' %}"></script>
         {% block form-js %}
         <script>
+            alert('me');
             $(".disable-btn-on-submit").submit(function () {
+                alert('me');
                 $("#btn-submit").attr("disabled", true);
                 return true;
             });
