--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -49,8 +49,14 @@
                 <div class="mt-2">
                     <button id="btn-submit" class="btn btn-primary btn-block" type="submit">Next</button>
                 </div>
-
             </form>
+            {% if not user.is_authenticated %}
+                <div class="form-links mt-2">
+                    <div>
+                        <a href="{% url 'customer:sign-in' %}">Sign in</a>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
