--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <meta name="keywords" content="bootstrap 4, mobile template, cordova, phonegap, mobile, html" />
         <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.ico' %}" sizes="16x16">
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/icon/192x192.png' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
         <link rel="manifest" href="{% static '__manifest.json' %}">
