--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,24 @@
         <title>Transfr - {% block page-title %}Send Money{% endblock %}</title>
         <meta name="description" content="Send money instantly to anyone in Ghana and Nigeria at the best rates!">
         <meta name="keywords" content="bootstrap 4, mobile template, cordova, phonegap, mobile, html" />
-        <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.ico' %}" sizes="16x16">
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/icon/192x192.png' %}">
+        <link rel="icon" type="image/png" href="{% static 'assets/img/icon/favicon.ico' %}" sizes="16x16">
+        <link rel="apple-touch-icon" sizes="57x57" href="{% static 'assets/img/icon/apple-icon-57x57.png' %}">
+        <link rel="apple-touch-icon" sizes="60x60" href="{% static 'assets/img/icon/apple-icon-60x60.png' %}">
+        <link rel="apple-touch-icon" sizes="72x72" href="{% static 'assets/img/icon/apple-icon-72x72.png' %}">
+        <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/icon/apple-icon-76x76.png' %}">
+        <link rel="apple-touch-icon" sizes="114x114" href="{% static 'assets/img/icon/apple-icon-114x114.png' %}">
+        <link rel="apple-touch-icon" sizes="120x120" href="{% static 'assets/img/icon/apple-icon-120x120.png' %}">
+        <link rel="apple-touch-icon" sizes="144x144" href="{% static 'assets/img/icon/apple-icon-144x144.png' %}">
+        <link rel="apple-touch-icon" sizes="152x152" href="{% static 'assets/img/icon/apple-icon-152x152.png' %}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/icon/apple-icon-180x180.png' %}">
+        <link rel="icon" type="image/png" sizes="192x192"  href="{% static 'assets/img/icon/android-icon-192x192.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'assets/img/icon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="96x96" href="{% static 'assets/img/icon/favicon-96x96.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'assets/img/icon/favicon-16x16.png' %}">
+        <link rel="manifest" href="{% static 'assets/img/icon/manifest.json' %}">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="{% static 'assets/img/icon/ms-icon-144x144.png' %}">
+        <meta name="theme-color" content="#ffffff">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
