Display currency symbol next to source amount field. Use USD-GHS rate.

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
                 }
             }
             const getRateAndAmount = (currency) => {
-                const url = 'https://api.coinbase.com/v2/prices/BTC-' + currency + '/spot';
+                const url = 'https://api.coinbase.com/v2/prices/USD-' + currency + '/spot';
                 const symbols = {
                     'GHS': 'GH₵',
                     'NGN': '₦'
