Display message while fetching Bitcoin rates.

--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -37,7 +37,7 @@
                         {{ form.dest_amount }}
                         {{ form.dest_amount.errors }}
                     </div>
-                    <div><small>Rate is <span id="rate"></span></small></div>
+                    <small id="message"></small>
                 </div>
 
                 <div class="form-group boxed">
