--- a/templates/inc/capsules/_signin.html
+++ b/templates/inc/capsules/_signin.html
@@ -1,47 +1,47 @@
 <!-- App Capsule -->
 <div id="appCapsule" class="mt-5">
-    <div class="login-form">
-        <div class="section mb-5 ml-2 mr-2">
-            <div class="section-title">
-                <h1>Welcome back</h1>
-            </div>
-            <form method="post" class="disable-btn-on-submit">
-                {% csrf_token %}
-                {{ form.non_field_errors }}
-                <div class="form-group boxed">
-                    {{ form.username.errors }}
-                    <div class="input-wrapper">
-                        {{ form.username }}
-                        <i class="clear-input">
-                            <ion-icon name="close-circle"></ion-icon>
-                        </i>
-                    </div>
-                </div>
-
-                <div class="form-group boxed">
-                    {{ form.password.errors }}
-                    <div class="input-wrapper">
-                        {{ form.password }}
-                        <i class="clear-input">
-                            <ion-icon name="close-circle"></ion-icon>
-                        </i>
-                    </div>
-                </div>
-
-                <div class="form-links mt-2">
-                    <div>
-                        <span>Don't have an account?</span> 
-                        <a href="{% url 'customer:sign-up' %}{% if next %}?next={{ next }}{% endif %}">Sign up</a>
-                    </div>
-                    <div><a href="#" class="text-muted">Forgot Password?</a></div>
-                </div>
-
-                <div class="form-button-group">
-                    <button id="btn-submit" type="submit" class="btn btn-primary btn-block btn-lg">Log In</button>
-                </div>
-
-            </form>
+  <div class="login-form">
+    <div class="section mb-5 ml-2 mr-2">
+      <div class="section-title">
+        <h1>Welcome back</h1>
+      </div>
+      <form method="post" class="disable-btn-on-submit">
+        {% csrf_token %}
+        {{ form.non_field_errors }}
+        <div class="form-group boxed">
+          {{ form.username.errors }}
+          <div class="input-wrapper">
+            {{ form.username }}
+            <i class="clear-input">
+              <ion-icon name="close-circle"></ion-icon>
+            </i>
+          </div>
         </div>
+
+        <div class="form-group boxed">
+          {{ form.password.errors }}
+          <div class="input-wrapper">
+            {{ form.password }}
+            <i class="clear-input">
+              <ion-icon name="close-circle"></ion-icon>
+            </i>
+          </div>
+        </div>
+
+        <div class="form-links mt-2">
+          <div>
+            <span>Don't have an account?</span> 
+            <a href="{% url 'customer:sign-up' %}{% if next %}?next={{ next }}{% endif %}">Sign up</a>
+          </div>
+          <div><a href="{% url 'customer:password-reset' %}" class="text-muted">Forgot Password?</a></div>
+        </div>
+
+        <div class="form-button-group">
+          <button id="btn-submit" type="submit" class="btn btn-primary btn-block btn-lg">Log In</button>
+        </div>
+
+      </form>
     </div>
+  </div>
 </div>
 <!-- * App Capsule -->
