--- a/templates/customer/password_reset_form.html
+++ b/templates/customer/password_reset_form.html
@@ -8,6 +8,7 @@
     <div class="section mt-1">
       <h1>Forgotten your password?</h1>
       <h4>Enter your email address below, and we'll email instructions for setting a new one.</h4>
+    </div>
   </div>
   <div class="section mt-1 mb-5">
     <form method="post" class="disable-btn-on-submit">
