--- a/templates/customer/password_reset_email.html
+++ b/templates/customer/password_reset_email.html
@@ -1,2 +1,2 @@
 Someone asked for password reset for email {{ email }}. Follow the link below:
-{{ protocol}}://{{ domain }}{% url 'account:password-reset-confirm' uidb64=uid token=token %}
+{{ protocol}}://{{ domain }}{% url 'customer:password-reset-confirm' uidb64=uid token=token %}
