Password reset complete.

--- a/templates/customer/password_reset_done.html
+++ b/templates/customer/password_reset_done.html
@@ -8,8 +8,8 @@
 <div id="appCapsule" class="mt-5">
   <div class="login-form">
     <div class="section mt-1">
-      <p class="text-start fw-light">{% translate 'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.' %}</p>
-      <p class="text-start fw-light">{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
+      <p class="fw-light">{% translate 'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.' %}</p>
+      <p class="fw-light">{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
     </div>
   </div>
 </div>
