Change font feel.

--- a/templates/customer/password_reset_complete.html
+++ b/templates/customer/password_reset_complete.html
@@ -7,7 +7,7 @@
 {% block app-capsule %}
 <div id="appCapsule" class="mt-5">
   <div class="login-form">
-    <p class="text-start fw-light">{% translate "Your password has been set. You may go ahead and log in now." %}</p>
+    <h4>{% translate "Your password has been set. You may go ahead and log in now." %}</h4>
     <p><a href="{{ login_url }}">{% translate 'Log in' %}</a></p>
   </div>
 </div>
