--- a/templates/customer/password_reset_confirm.html
+++ b/templates/customer/password_reset_confirm.html
@@ -8,7 +8,7 @@
 <div id="appCapsule" class="mt-5">
   <div class="login-form">
     <div class="section mt-1">
-      <h4 class="fw-light">{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</h4>
+      <h4>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</h4>
     </div>
     <div class="section mt-1 mb-5">
       <form method="post" class="disable-btn-on-submit">
