Load autonumeric properly.

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
         </script>
         {% endblock %}
         {% block page-js %}
-        <script src="https://unpkg.com/autonumeric"></script>
+        <script src="https://unpkg.com/autonumeric@4.6.0/dist/autoNumeric.min.js"></script>
         <script>
             new AutoNumeric('#id_source_amount', {
                 'decimalPlaces': 5,
